--- a/src/Tutorials/Tetris/index.css
+++ b/src/Tutorials/Tetris/index.css
@@ -22,7 +22,7 @@ a:hover {
 .svg-container {
   position: relative;
   overflow: hidden;
-  width: 330xpx;
+  width: 330px;
   height: 594px;
   border: 5px solid rgba(0,0,0,0.2);
   border-radius: 2px;
