--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,39 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  /*animation: App-logo-spin infinite 1s linear;*/
+  transform-origin: center;
   height: 80px;
+}
+
+.svg-outer{
+  border: 1px  solid burlywood;
+  width:100px;
+  height: 50px;
+
+  /*overflow: hidden;*/
+}
+.box-svg {
+  position: relative;
+  height: auto;
+  width:100px;
+}
+.mark-svg {
+  position: relative;
+  top: -75px;
+  height: auto;
+  width:100px;
+
+  /*animation: App-logo-spin infinite 1s linear;*/
+}
+
+.markedBox-svg {
+  position: relative;
+
+  height: auto;
+  width:100px;
+
+  /*animation: App-logo-spin infinite 1s linear;*/
 }
 
 .App-header {
@@ -23,6 +54,12 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  0%   {transform: scale(0.5); opacity: 0}
+  50%  {transform: scale(1); opacity: 1}
+  100% {transform: scale(1.2); opacity: 0}
 }
+
+/*@keyframes App-logo-spin {*/
+  /*from { transform: rotate(0deg); }*/
+  /*to { transform: rotate(360deg); }*/
+/*}*/
