--- a/src/MAPF/Coop/index.css
+++ b/src/MAPF/Coop/index.css
@@ -45,7 +45,7 @@ svg {
 }
 
 .position {
-  opacity: 0.4;
+  /*opacity: 0.4;*/
   stroke-width: 1px;
   stroke: #2973F2;
 }
@@ -60,11 +60,14 @@ Button{
 }
 
 .positionNumber {
-  fill: #fff;
+  fill: #000;
+  /*fill: #fff;*/
   /*fill: #0E1A9E;*/
   text-anchor: middle;
+  font-size: 1.2em;
 }
 
 .path {
-  stroke-width: 3px;
+  stroke-width: 14px;
+  opacity:0.7;
 }
