--- a/src/MAPF/Coop/index.css
+++ b/src/MAPF/Coop/index.css
@@ -67,6 +67,14 @@ Button{
   font-size: 1.2em;
 }
 
+.goalText{
+  fill: #222;
+  /*fill: #fff;*/
+  /*fill: #0E1A9E;*/
+  text-anchor: middle;
+  font-size: 1.2em;
+}
+
 .path {
   stroke-width: 14px;
   opacity:0.7;
