判断没有找到路径，原因就是起始位置设置的时候，把可走的地方覆盖了。导致没有格子可走。

--- a/src/RealCell/visual/index.css
+++ b/src/RealCell/visual/index.css
@@ -64,6 +64,13 @@ Button{
   font-size: 1.2em;
 }
 
+.cargoBoxNum{
+  font-size: 20px;
+  font-weight: 500;
+  stroke: red;
+  fill: black;
+}
+
 .goalText{
   fill: #222;
   /*fill: #fff;*/
