--- a/src/RealCell/visual/index.css
+++ b/src/RealCell/visual/index.css
@@ -70,6 +70,11 @@ Button{
   stroke: red;
   fill: black;
 }
+.priorityNum{
+  font-size: 10px;
+  stroke: red;
+  fill: green;
+}
 
 .goalText{
   fill: #222;
