Fix：自动生成goaTable，并在图上画出

--- a/src/MAPF/Coop4/index.css
+++ b/src/MAPF/Coop4/index.css
@@ -67,6 +67,15 @@ Button{
   font-size: 1.2em;
 }
 
+.GoalPositionNumber {
+  fill: #3E4A5E;
+  /*fill: #fff;*/
+  /*fill: #0E1A9E;*/
+  text-anchor: middle;
+  font-size: 1.5em;
+}
+
+
 .goalText{
   fill: #222;
   /*fill: #fff;*/
